# libsvmdata

./: .coveragerc  .gitignore  .travis.yml  LICENSE  README.rst  pyproject.toml  requirements.txt  setup.py
.github/workflows/: build.yml  build_wheels.yml  flake8.yml  flake9.yml
libsvmdata/: MANIFEST.in  __init__.py  abstraction.py  breheny.py  core.py  datasets.py  libsvm.py  openml.py
libsvmdata/tests/: test_core.py  test_datasets.py  test_libsvm.py
tests/: test_api.py  test_breheny.py  test_core.py  test_libsvm.py
